--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,15 @@ before_install:
 script:
   - docker run stephengrider/docker-react npm run test -- --coverage
 
-
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-eu-west-1-149549101676"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
